# CMAQ_Emulator

./: .gitignore  README.md  data_analysis.ipynb  data_used_finetune.ipynb  example.py  load_model_test.py  mapping_table.py  mapping_table_full.csv  output.csv  requirement.txt  run_year_finetune.py  uses_vars.txt
model_compile/: CMakeLists.txt  forward  forward.c  forward.h  parse_param.py
model_compile/layers/: batch_normalization.h  concat.h  conv2d.h  pooling.h
model_compile/params/: layer_0_params_conv2d.h  layer_13_params_conv2d.h  layer_14_params_batch_normalization.h  layer_18_params_conv2d.h  layer_1_params_conv2d.h  layer_20_params_conv2d.h  layer_21_params_conv2d.h  layer_22_params_batch_normalization.h  layer_27_params_conv2d.h  layer_28_params_conv2d.h  layer_2_params_batch_normalization.h  layer_31_params_batch_normalization.h  layer_33_params_conv2d.h  layer_35_params_conv2d_transpose.h  layer_36_params_batch_normalization.h  layer_37_params_conv2d.h  layer_3_params_conv2d.h  layer_40_params_conv2d_transpose.h  layer_44_params_batch_normalization.h  layer_45_params_conv2d.h  layer_6_params_conv2d.h  layer_8_params_conv2d.h  params.h
o3_model_compile/: CMakeLists.txt  forward  forward(2025-03-14_14h23m).c  forward.c  forward.h  parse_param.py  scale_params.py  test.ipynb
o3_model_compile/layers/: conv2d_transpose.h
o3_model_compile/params/: layer_0_params_conv2d.h  layer_10_params_conv2d.h  layer_11_params_batch_norm.h  layer_12_params_conv2d.h  layer_13_params_batch_norm.h  layer_14_params_conv2d.h  layer_15_params_batch_norm.h  layer_16_params_conv2d.h  layer_17_params_batch_norm.h  layer_19_params_batch_norm.h  layer_1_params_batch_norm.h  layer_20_params_conv2d_transpose.h  layer_21_params_batch_norm.h  layer_22_params_conv2d.h  layer_23_params_batch_norm.h  layer_24_params_conv2d_transpose.h  layer_25_params_batch_norm.h  layer_26_params_conv2d.h  layer_27_params_batch_norm.h  layer_28_params_conv2d_transpose.h  layer_29_params_batch_norm.h  layer_2_params_conv2d.h  layer_30_params_conv2d.h  layer_31_params_batch_norm.h  layer_32_params_conv2d.h  layer_3_params_batch_norm.h  layer_4_params_conv2d.h  layer_5_params_batch_norm.h  layer_6_params_conv2d.h  layer_7_params_batch_norm.h  layer_8_params_conv2d.h  layer_9_params_batch_norm.h  layer_gridding.h  params.h  scale_params.h
o3_model_compile/utils/: logger.h
pm25_model_compile/: CMakeLists.txt  forward.c  forward.h  model_summary.ipynb  model_summary.txt  output_python.csv  parse_param.py  test.ipynb
pm25_model_compile/layers/: utils.h
pm25_model_compile/params/: layer_0_params_dense.h  layer_10_params_batch_norm.h  layer_11_params_conv2d.h  layer_12_params_dense.h  layer_13_params_batch_norm.h  layer_14_params_conv2d.h  params.h  (+31 more)
(+236 files in other folders)
